--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.Donona"
         tools:targetApi="31">
         <activity
-            android:name=".MapActivity"
+            android:name=".VietMapMapViewActivity"
             android:exported="false" />
         <activity
             android:name=".StreamingActivity"
