--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,16 +19,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Donona"
         tools:targetApi="31">
+        <activity
+            android:name=".GameLauncherActivity"
+            android:exported="false" />
+
         <service
             android:name=".NearActivity"
-            android:foregroundServiceType="location"
-            />
+            android:foregroundServiceType="location" />
+
         <activity
             android:name=".ProfileActivity"
             android:exported="false"
             android:label="@string/title_activity_profile"
             android:theme="@style/Theme.Donona" />
-
         <activity
             android:name=".NearActivity"
             android:exported="false" />
