--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
         android:theme="@style/Theme.Donona"
         tools:targetApi="31">
         <activity
+            android:name=".ReadBlogActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BlogPostActivity"
+            android:exported="false" />
+        <activity
             android:name=".GameLauncherActivity"
             android:exported="false" />
 
@@ -35,9 +41,9 @@
         <activity
             android:name=".NearActivity"
             android:exported="false" />
-        <activity
-            android:name=".VietMapMapViewActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".VietMapMapViewActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".StreamingActivity"
             android:exported="false" />
@@ -60,6 +66,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
             android:name="vn.vietmap.services.android.navigation.v5.navigation.NavigationService"
             android:enabled="true"
