--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:theme="@style/Theme.Donona"
         tools:targetApi="31">
         <activity
+            android:name=".SubscriptionActivity"
+            android:exported="false" />
+        <activity
             android:name=".ReadBlogActivity"
             android:exported="false" />
         <activity
@@ -43,10 +46,9 @@
             android:theme="@style/Theme.Donona" />
         <activity
             android:name=".NearActivity"
-            android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".VietMapMapViewActivity"-->
-<!--            android:exported="false" />-->
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".VietMapMapViewActivity" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".StreamingActivity"
             android:exported="false" />
